Fixed hero and header classes (using only _1 naming)

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,183 +1,148 @@
-<footer class="footer">
+<!--========FOOTER START========  -->
+<footer class="footer_1">
   <div class="container">
-    <div class="footer__head">
-      <div class="footer__head-text">
-        <h3 class="footer__title">Think beyond the wave</h3>
-        <p class="footer__desc text-p-medium">
-          Ask about Sans products, pricing, implementation, or anything else.
-          Our highly trained reps are standing by, ready to help
-        </p>
-      </div>
-      <a class="footer__link button-form" href="/coca/contact.html#get-started"
-        >Try to free</a
-      >
-    </div>
-    <div class="footer__body">
-      <div class="footer__body-info">
-        <a class="footer__logo" href="/coca/" aria-label="Home page">
+    <div class="footer_1_2">
+      <div class="footer_1_2_1">
+        <a class="footer_1_2_1_1" href="/coca/" aria-label="Home page">
           <img
             loading="lazy"
-            src="./assets/icons/light-logo-icon.svg"
-            width="140"
+            src="./assets/image/logo_footer_img_1_2_1_1_1.png"
+            width="80"
             height="42"
-            alt="Coca logo"
+            alt="Website logo"
           />
         </a>
-        <p class="footer__body-desc text-p-default">
+        <p class="footer_1_2_1_2 text-p-default" id="footer_1_2_1_2_text">
           We built an elegant solution. Our team created a fully integrated
           sales and marketing solution for SMBs
         </p>
       </div>
-      <nav class="footer__nav text-p-default">
-        <ul class="footer__list accordion-list" data-accordion="list">
-          <li class="footer__item accordion-list__item">
-            <button class="footer__item-title accordion-list__control">
-              <span class="accordion-list__control-title">Company</span>
+      <nav class="footer_1_3 text-p-default">
+        <ul class="footer_1_3_1 accordion-list" data-accordion="list">
+          <li class="footer_1_3_1_1" id="footer_1_3_1_1_text">
+            <button class="footer_1_3_1_1_1">
+              <span id="footer_1_3_1_1_1_1_text">Company</span>
             </button>
-            <ul class="footer__sublist accordion-list__content">
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="/coca/">Home</a>
+            <ul class="footer_1_3_1_1_2">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="/coca/"
+                  id="footer_1_3_1_1_2_1_1_text"
+                  >Home</a
+                >
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="/coca/services.html">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="/coca/services.html"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
                   Services
                 </a>
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="/coca/contact.html">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="/coca/contact.html"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
                   Contact
                 </a>
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="/coca/pricing.html">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="/coca/pricing.html"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
                   Pricing
                 </a>
               </li>
             </ul>
           </li>
-          <li class="footer__item accordion-list__item">
-            <button class="footer__item-title accordion-list__control">
-              <span class="accordion-list__control-title">Product</span>
+          <li class="footer_1_3_1_1">
+            <button class="footer_1_3_1_1_1">
+              <span id="footer_1_3_1_1_1_1_text">Product</span>
             </button>
-            <ul class="footer__sublist accordion-list__content">
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Sales Software</a>
+            <ul class="footer_1_3_1_1_2">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="#"
+                  id="footer_1_3_1_1_2_1_1_text"
+                  >Sales Software</a
+                >
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Marketplace</a>
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="#"
+                  id="footer_1_3_1_1_2_1_1_text"
+                  >Marketplace</a
+                >
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Terms & Conditions</a>
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="#"
+                  id="footer_1_3_1_1_2_1_1_text"
+                  >Terms & Conditions</a
+                >
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Privacy Policy</a>
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="#"
+                  id="footer_1_3_1_1_2_1_1_text"
+                  >Privacy Policy</a
+                >
               </li>
             </ul>
           </li>
-          <li class="footer__item accordion-list__item">
-            <button class="footer__item-title accordion-list__control">
-              <span class="accordion-list__control-title">Discover</span>
+          <li class="footer_1_3_1_1 footer_1_3_1_1--contact">
+            <button class="footer_1_3_1_1_1" id="footer_1_3_1_1_1_text">
+              <span id="footer_1_3_1_1_1_1_text">Our Contacts</span>
             </button>
-            <ul class="footer__sublist accordion-list__content">
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">CRM Comparison</a>
+            <ul class="footer_1_3_1_1_2">
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="#"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
+                  Malaysia, Kuala Lumpur, Jalan Ampang, Menara Citibank, 22nd
+                  floor, Suite 2201.
+                </a>
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Partner Program</a>
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="tel:+600146732992"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
+                  +60 014 6732992
+                </a>
               </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">What is CRM</a>
-              </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Resource</a>
-              </li>
-            </ul>
-          </li>
-          <li class="footer__item accordion-list__item">
-            <button class="footer__item-title accordion-list__control">
-              <span class="accordion-list__control-title">Help Center</span>
-            </button>
-            <ul class="footer__sublist accordion-list__content">
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Community</a>
-              </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Knowledge Base</a>
-              </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Academy</a>
-              </li>
-              <li class="footer__subitem">
-                <a class="footer__subitem-link" href="#">Support</a>
+              <li class="footer_1_3_1_1_2_1">
+                <a
+                  class="footer_1_3_1_1_2_1_1"
+                  href="mailto:support@domain.com"
+                  id="footer_1_3_1_1_2_1_1_text"
+                >
+                  support@domain.com
+                </a>
               </li>
             </ul>
           </li>
         </ul>
       </nav>
     </div>
-    <div class="footer__bottom">
-      <div class="footer__bottom-lists">
-        <ul class="footer__social-list">
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="#" aria-label="Facebook">
-              <img
-                loading="lazy"
-                src="./assets/icons/socials/facebook-icon.svg"
-                width="20"
-                height="20"
-                alt="Facebook icon"
-              />
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="#" aria-label="Twitter">
-              <img
-                loading="lazy"
-                src="./assets/icons/socials/twitter-icon.svg"
-                width="20"
-                height="20"
-                alt="Twitter icon"
-              />
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="#" aria-label="Instagram">
-              <img
-                loading="lazy"
-                src="./assets/icons/socials/instagram-icon.svg"
-                width="20"
-                height="20"
-                alt="Instagram icon"
-              />
-            </a>
-          </li>
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="#" aria-label="LinkedIn">
-              <img
-                loading="lazy"
-                src="./assets/icons/socials/linkedin-icon.svg"
-                width="20"
-                height="20"
-                alt="LinkedIn icon"
-              />
-            </a>
-          </li>
-        </ul>
-        <ul class="footer__bottom-list text-p-small">
-          <li class="footer__bottom-item">
-            <a class="footer__bottom-link" href="#">Privacy Policy</a>
-          </li>
-          <li class="footer__bottom-item">
-            <a class="footer__bottom-link" href="#">Terms & Conditions</a>
-          </li>
-          <li class="footer__bottom-item">
-            <a class="footer__bottom-link" href="#">Support</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer__copyright">
+    <div class="footer_1_4">
+      <div class="footer_1_4_1" id="footer_1_4_1_text">
         © Copyright 2023, All Rights Reserved
       </div>
     </div>
   </div>
 </footer>
+<!--========FOOTER END========  -->
