--- a/src/html/components/home/hero.html
+++ b/src/html/components/home/hero.html
@@ -1,70 +1,14 @@
-<section class="hero hero-decor">
-  <div class="container hero__container">
-    <div class="hero__left">
-      <h2 class="hero__title">Digitally forward creative</h2>
-      <p class="hero__subtitle text-p-subtitle">
-        When it comes to interactive <br />
-        marketing, we've got you covered. <br />
-        Be where the world is going
+<!--========HERO START========  -->
+<section class="hero_1 hero_1-decor">
+  <div class="container hero_1_1">
+    <div class="hero_1_1_1">
+      <h2 class="hero_1_1_1_1">Innovative Solutions for Growth</h2>
+      <p class="hero_1_1_1_1_1 text-p-subtitle">
+        Explore the future of digital transformation. <br />
+        We provide the tools and expertise you need <br />
+        to stay ahead in a rapidly changing world.
       </p>
-      <form class="hero__form">
-        <input
-          class="hero__input"
-          type="email"
-          placeholder="Enter your email"
-          required
-        />
-        <button class="hero__btn button-form">Try for free</button>
-      </form>
-    </div>
-    <div class="hero__right">
-      <div class="hero__sales">
-        <h3 class="hero__sales-title">Sales Report</h3>
-        <img
-          class="hero__sales-img"
-          src="./assets/icons/sales-report-graph-icon.svg"
-          width="366"
-          height="260"
-          alt="Sales report graphic"
-        />
-      </div>
-      <div class="hero__customer">
-        <h3 class="hero__customer-title">Customer Growth</h3>
-        <img
-          src="./assets/icons/customer-grow-graph-icon.svg"
-          width="177"
-          height="149"
-          alt="Customer grow graphic"
-        />
-      </div>
-      <table class="hero__stats">
-        <thead class="hero__stats-head">
-          <tr class="hero__stats-head-row">
-            <th class="hero__stats-head-th">Sales</th>
-            <th class="hero__stats-head-th">Marketing</th>
-          </tr>
-        </thead>
-        <tbody class="hero__stats-body">
-          <tr class="hero__stats-body-row">
-            <td class="hero__stats-body-td">$31,092</td>
-            <td class="hero__stats-body-td">$29,128</td>
-          </tr>
-          <tr class="hero__stats-body-row">
-            <td class="hero__stats-body-td">
-              <span class="hero__stats-body-num hero__stats-body-num--green">
-                4.2%
-              </span>
-              <span class="hero__stats-body-text">from last year</span>
-            </td>
-            <th class="hero__stats-body-td">
-              <span class="hero__stats-body-num hero__stats-body-num--red">
-                1.2%
-              </span>
-              <span class="hero__stats-body-text">from last year</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </div>
   </div>
 </section>
+<!--========HERO END========  -->
