--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,4 +1,6 @@
-.header {
+/* stylelint-disable selector-class-pattern */
+// <!--========HEADER START========  -->
+.nav_1 {
   padding: 26px 0 22px;
   background-color: var(--neutral-color-10);
   opacity: 0;
@@ -38,33 +40,24 @@
     padding: 0;
   }
 
-  &__container {
+  &_1 {
     @include flex-all-between;
   }
 
-  &__logo {
+  &_1_1 {
     position: relative;
     z-index: var(--z-index-4);
+    max-width: 70px;
 
-    & svg {
+    & img {
       @include mobile {
         padding-top: 10px;
-        max-width: 120px;
-      }
-
-      & path {
-        &:not(:last-child) {
-          fill: var(--logo-color-text);
-        }
-      }
-
-      & circle {
-        fill: var(--logo-color-circle);
+        max-width: 40px;
       }
     }
   }
 
-  &__right {
+  &_1_1_1 {
     @include flex-align-center;
     gap: 111px;
 
@@ -97,106 +90,52 @@
     }
   }
 
-  &__switcher {
-    position: relative;
-    border-radius: 13px;
-    width: 63px;
-    height: 27px;
-    background-color: var(--neutral-color-130);
-    transform: translateY(8px);
-    transition: background-color var(--transition);
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 2px;
-      left: 3px;
-      display: inline-block;
-      border-radius: 50%;
-      width: 23px;
-      height: 23px;
-      background: var(--neutral-color-120);
-      transition:
-        left var(--transition),
-        background-color var(--transition);
-    }
-
-    &-text {
-      position: absolute;
-      top: -24px;
-      left: 50%;
-      font-weight: 600;
-      line-height: 1.5;
-      text-align: center;
-      color: var(--neutral-color-140);
-      transform: translateX(-50%);
+  &_1_1_1_1 {
+    &_1 {
+      @include flex-align-center;
+      gap: 32px;
 
       @include small-tablet {
-        top: -28px;
-        font-size: 20px;
+        gap: 20px;
+        flex-direction: column;
       }
-    }
 
-    &-checkbox {
-      appearance: none;
-    }
-
-    &:has(&-checkbox:checked) {
-      background-color: var(--neutral-color-60);
-
-      &::before {
-        left: 38px;
-        background-color: var(--primary-color-50);
+      @include mobile {
+        gap: 10px;
       }
-    }
-  }
-}
 
-.nav {
-  &__list {
-    @include flex-align-center;
-    gap: 32px;
+      &_1 {
+        position: relative;
+        font-weight: 500;
+        line-height: 162%;
+        color: var(--neutral-color-100);
 
-    @include small-tablet {
-      gap: 20px;
-      flex-direction: column;
-    }
+        @include small-tablet {
+          font-size: 20px;
+          line-height: 200%;
+        }
 
-    @include mobile {
-      gap: 10px;
-    }
-  }
+        &::after {
+          content: '';
+          position: absolute;
+          right: 0;
+          bottom: -5px;
+          left: 0;
+          height: 1px;
+          background: var(--neutral-color-100);
+          opacity: 0;
+          visibility: hidden;
+          transition:
+            opacity var(--transition),
+            visibility var(--transition);
+        }
 
-  &__link {
-    position: relative;
-    font-weight: 500;
-    line-height: 162%;
-    color: var(--neutral-color-100);
-
-    @include small-tablet {
-      font-size: 20px;
-      line-height: 200%;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      right: 0;
-      bottom: -5px;
-      left: 0;
-      height: 1px;
-      background: var(--neutral-color-100);
-      opacity: 0;
-      visibility: hidden;
-      transition:
-        opacity var(--transition),
-        visibility var(--transition);
-    }
-
-    &:hover {
-      &::after {
-        opacity: 1;
-        visibility: visible;
+        &:hover {
+          &::after {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
       }
     }
   }
@@ -221,6 +160,8 @@
   }
 }
 
-.burger {
-  @include burger;
+.nav_1_1_1_1_1_1_1_1_1 {
+  @include nav_1_1_1_1_1_1_1_1_1;
 }
+/* stylelint-disable-next-line scss/double-slash-comment-empty-line-before */
+// <!--========HEADER END========  -->
