Changed footer classes to (_1 naming)

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,9 +1,9 @@
 <!--========FOOTER START========  -->
 <footer class="footer_1">
   <div class="container">
-    <div class="footer_1_2">
-      <div class="footer_1_2_1">
-        <a class="footer_1_2_1_1" href="/coca/" aria-label="Home page">
+    <div class="footer_1_1">
+      <div class="footer_1_1_1">
+        <a class="footer_1_1_1_1" href="/coca/" aria-label="Home page">
           <img
             loading="lazy"
             src="./assets/image/logo_footer_img_1_2_1_1_1.png"
@@ -12,47 +12,47 @@
             alt="Website logo"
           />
         </a>
-        <p class="footer_1_2_1_2 text-p-default" id="footer_1_2_1_2_text">
+        <p class="footer_1_1_1_1_1 text-p-default" id="footer_1_2_1_2_text">
           We built an elegant solution. Our team created a fully integrated
           sales and marketing solution for SMBs
         </p>
       </div>
-      <nav class="footer_1_3 text-p-default">
-        <ul class="footer_1_3_1 accordion-list" data-accordion="list">
-          <li class="footer_1_3_1_1" id="footer_1_3_1_1_text">
-            <button class="footer_1_3_1_1_1">
-              <span id="footer_1_3_1_1_1_1_text">Company</span>
+      <nav class="footer_1_1_1_1_1_1 text-p-default">
+        <ul class="footer_1_1_1_1_1_1_1 accordion-list" data-accordion="list">
+          <li class="footer_1_1_1_1_1_1_1_1" id="footer_1_3_1_1_text">
+            <button class="footer_1_1_1_1_1_1_1_1_1">
+              <span id="footer_1_1_1_1_1_1_1_1_1_1_text">Company</span>
             </button>
-            <ul class="footer_1_3_1_1_2">
-              <li class="footer_1_3_1_1_2_1">
+            <ul class="footer_1_1_1_1_1_1_1_1_1_1_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="/coca/"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Home</a
                 >
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="/coca/services.html"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   Services
                 </a>
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="/coca/contact.html"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   Contact
                 </a>
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="/coca/pricing.html"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
@@ -61,38 +61,38 @@
               </li>
             </ul>
           </li>
-          <li class="footer_1_3_1_1">
-            <button class="footer_1_3_1_1_1">
-              <span id="footer_1_3_1_1_1_1_text">Product</span>
+          <li class="footer_1_1_1_1_1_1_1_1">
+            <button class="footer_1_1_1_1_1_1_1_1_1">
+              <span id="footer_1_1_1_1_1_1_1_1_1_1_text">Product</span>
             </button>
-            <ul class="footer_1_3_1_1_2">
-              <li class="footer_1_3_1_1_2_1">
+            <ul class="footer_1_1_1_1_1_1_1_1_1_1_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Sales Software</a
                 >
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Marketplace</a
                 >
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Terms & Conditions</a
                 >
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                   >Privacy Policy</a
@@ -100,14 +100,14 @@
               </li>
             </ul>
           </li>
-          <li class="footer_1_3_1_1 footer_1_3_1_1--contact">
-            <button class="footer_1_3_1_1_1" id="footer_1_3_1_1_1_text">
-              <span id="footer_1_3_1_1_1_1_text">Our Contacts</span>
+          <li class="footer_1_1_1_1_1_1_1_1 footer_1_1_1_1_1_1_1_1--contact">
+            <button class="footer_1_1_1_1_1_1_1_1_1" id="footer_1_3_1_1_1_text">
+              <span id="footer_1_1_1_1_1_1_1_1_1_1_text">Our Contacts</span>
             </button>
-            <ul class="footer_1_3_1_1_2">
-              <li class="footer_1_3_1_1_2_1">
+            <ul class="footer_1_1_1_1_1_1_1_1_1_1_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="#"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
@@ -115,18 +115,18 @@
                   floor, Suite 2201.
                 </a>
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="tel:+600146732992"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
                   +60 014 6732992
                 </a>
               </li>
-              <li class="footer_1_3_1_1_2_1">
+              <li class="footer_1_1_1_1_1_1_1_1_1_1_1">
                 <a
-                  class="footer_1_3_1_1_2_1_1"
+                  class="footer_1_1_1_1_1_1_1_1_1_1_1_1"
                   href="mailto:support@domain.com"
                   id="footer_1_3_1_1_2_1_1_text"
                 >
@@ -138,8 +138,11 @@
         </ul>
       </nav>
     </div>
-    <div class="footer_1_4">
-      <div class="footer_1_4_1" id="footer_1_4_1_text">
+    <div class="footer_1_1_1_1_1_1_1_1_1_1_1_1_1">
+      <div
+        class="footer_1_1_1_1_1_1_1_1_1_1_1_1_1_1"
+        id="footer_1_1_1_1_1_1_1_1_1_1_1_1_1_text"
+      >
         © Copyright 2023, All Rights Reserved
       </div>
     </div>
