Added all necessary sections

--- a/src/html/components/pricing/hero.html
+++ b/src/html/components/pricing/hero.html
@@ -1,28 +1,28 @@
-<section class="hero">
-  <div class="hero__top hero-decor">
+<section class="pricing">
+  <div class="pricing__top pricing-decor">
     <div class="container">
-      <h2 class="hero__title text-p-default">Pricing plans 🤑</h2>
-      <p class="hero__desc heading-h1">
+      <h2 class="pricing__title text-p-default">Pricing plans 🤑</h2>
+      <p class="pricing__desc heading-h1">
         Choose a plan for a more advanced business
       </p>
     </div>
-    <label class="hero__switcher-wrapper">
-      <span class="hero__switcher">
+    <label class="pricing__switcher-wrapper">
+      <span class="pricing__switcher">
         <input
-          class="hero__switcher-checkbox"
+          class="pricing__switcher-checkbox"
           type="checkbox"
           data-price="switcher"
         />
       </span>
-      <span class="hero__switcher-text text-p-default">
+      <span class="pricing__switcher-text text-p-default">
         Annual pricing (save 20%)
       </span>
     </label>
   </div>
   <div class="container">
-    <ul class="hero__plans">
-      <li class="hero__item">
-        <div class="hero__plans-icon">
+    <ul class="pricing__plans">
+      <li class="pricing__item">
+        <div class="pricing__plans-icon">
           <svg
             width="20"
             height="18"
@@ -39,52 +39,52 @@
             />
           </svg>
         </div>
-        <h3 class="hero__plans-title text-p-large">Starter</h3>
-        <p class="hero__plans-desc text-p-default">
+        <h3 class="pricing__plans-title text-p-large">Starter</h3>
+        <p class="pricing__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="hero__plans-price heading-h2">
+        <div class="pricing__plans-price heading-h2">
           <span data-price="starter"> $100 </span>
-          <span class="hero__plans-price-text text-p-default" data-price="plan"
+          <span class="pricing__plans-price-text text-p-default" data-price="plan"
             >/year</span
           >
         </div>
-        <h4 class="hero__plans-list-title text-p-default">What’s included:</h4>
-        <ul class="hero__plans-list">
-          <li class="hero__plans-item text-p-default">Unlimited Upload</li>
-          <li class="hero__plans-item text-p-default">Advanced Statistic</li>
-          <li class="hero__plans-item text-p-default">Profile Badge</li>
-          <li class="hero__plans-item text-p-default">
+        <h4 class="pricing__plans-list-title text-p-default">What’s included:</h4>
+        <ul class="pricing__plans-list">
+          <li class="pricing__plans-item text-p-default">Unlimited Upload</li>
+          <li class="pricing__plans-item text-p-default">Advanced Statistic</li>
+          <li class="pricing__plans-item text-p-default">Profile Badge</li>
+          <li class="pricing__plans-item text-p-default">
             Access to the community
           </li>
           <li
-            class="hero__plans-item hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
           >
             History of all Liked Photos
           </li>
           <li
-            class="hero__plans-item hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
           >
             Directory Listing
           </li>
           <li
-            class="hero__plans-item hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
           >
             Customize Your Profile
           </li>
           <li
-            class="hero__plans-item hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--inaccess text-p-default"
           >
             Display Your Workshops
           </li>
         </ul>
-        <div class="hero__plans-btn-wrapper">
-          <button class="hero__plans-btn text-p-default">Chose Plan</button>
+        <div class="pricing__plans-btn-wrapper">
+          <button class="pricing__plans-btn text-p-default">Chose Plan</button>
         </div>
       </li>
-      <li class="hero__item hero__item--popular">
-        <div class="hero__plans-icon hero__plans-icon--popular">
+      <li class="pricing__item pricing__item--popular">
+        <div class="pricing__plans-icon pricing__plans-icon--popular">
           <svg
             width="24"
             height="24"
@@ -101,66 +101,66 @@
             />
           </svg>
         </div>
-        <h3 class="hero__plans-title hero__plans-title--popular text-p-large">
+        <h3 class="pricing__plans-title pricing__plans-title--popular text-p-large">
           Popular
         </h3>
-        <p class="hero__plans-desc text-p-default">
+        <p class="pricing__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="hero__plans-price hero__plans-price--popular heading-h2">
+        <div class="pricing__plans-price pricing__plans-price--popular heading-h2">
           <span data-price="popular"> $1400 </span>
-          <span class="hero__plans-price-text text-p-default" data-price="plan"
+          <span class="pricing__plans-price-text text-p-default" data-price="plan"
             >/year</span
           >
         </div>
         <h4
-          class="hero__plans-list-title hero__plans-list-title--popular text-p-default"
+          class="pricing__plans-list-title pricing__plans-list-title--popular text-p-default"
         >
           What’s included:
         </h4>
-        <ul class="hero__plans-list">
-          <li class="hero__plans-item hero__plans-item--popular text-p-default">
+        <ul class="pricing__plans-list">
+          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
             Unlimited Upload
           </li>
-          <li class="hero__plans-item hero__plans-item--popular text-p-default">
+          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
             Advanced Statistic
           </li>
-          <li class="hero__plans-item hero__plans-item--popular text-p-default">
+          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
             Profile Badge
           </li>
-          <li class="hero__plans-item hero__plans-item--popular text-p-default">
+          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
             Access to the community
           </li>
           <li
-            class="hero__plans-item hero__plans-item--popular hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
           >
             History of all Liked Photos
           </li>
-          <li class="hero__plans-item hero__plans-item--popular text-p-default">
+          <li class="pricing__plans-item pricing__plans-item--popular text-p-default">
             Directory Listing
           </li>
           <li
-            class="hero__plans-item hero__plans-item--popular hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
           >
             Customize Your Profile
           </li>
           <li
-            class="hero__plans-item hero__plans-item--popular hero__plans-item--inaccess text-p-default"
+            class="pricing__plans-item pricing__plans-item--popular pricing__plans-item--inaccess text-p-default"
           >
             Display Your Workshops
           </li>
         </ul>
-        <div class="hero__plans-btn-wrapper">
+        <div class="pricing__plans-btn-wrapper">
           <button
-            class="hero__plans-btn hero__plans-btn--popular text-p-default"
+            class="pricing__plans-btn pricing__plans-btn--popular text-p-default"
           >
             Chose Plan
           </button>
         </div>
       </li>
-      <li class="hero__item">
-        <div class="hero__plans-icon">
+      <li class="pricing__item">
+        <div class="pricing__plans-icon">
           <svg
             width="22"
             height="20"
@@ -184,38 +184,38 @@
             />
           </svg>
         </div>
-        <h3 class="hero__plans-title text-p-large">Enterprise</h3>
-        <p class="hero__plans-desc text-p-default">
+        <h3 class="pricing__plans-title text-p-large">Enterprise</h3>
+        <p class="pricing__plans-desc text-p-default">
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry.
         </p>
-        <div class="hero__plans-price heading-h2">
+        <div class="pricing__plans-price heading-h2">
           <span data-price="enterprice"> $2100 </span>
-          <span class="hero__plans-price-text text-p-default" data-price="plan"
+          <span class="pricing__plans-price-text text-p-default" data-price="plan"
             >/year</span
           >
         </div>
-        <h4 class="hero__plans-list-title text-p-default">What’s included:</h4>
-        <ul class="hero__plans-list">
-          <li class="hero__plans-item text-p-default">Unlimited Upload</li>
-          <li class="hero__plans-item text-p-default">Advanced Statistic</li>
-          <li class="hero__plans-item text-p-default">Profile Badge</li>
-          <li class="hero__plans-item text-p-default">
+        <h4 class="pricing__plans-list-title text-p-default">What’s included:</h4>
+        <ul class="pricing__plans-list">
+          <li class="pricing__plans-item text-p-default">Unlimited Upload</li>
+          <li class="pricing__plans-item text-p-default">Advanced Statistic</li>
+          <li class="pricing__plans-item text-p-default">Profile Badge</li>
+          <li class="pricing__plans-item text-p-default">
             Access to the community
           </li>
-          <li class="hero__plans-item text-p-default">
+          <li class="pricing__plans-item text-p-default">
             History of all Liked Photos
           </li>
-          <li class="hero__plans-item text-p-default">Directory Listing</li>
-          <li class="hero__plans-item text-p-default">
+          <li class="pricing__plans-item text-p-default">Directory Listing</li>
+          <li class="pricing__plans-item text-p-default">
             Customize Your Profile
           </li>
-          <li class="hero__plans-item text-p-default">
+          <li class="pricing__plans-item text-p-default">
             Display Your Workshops
           </li>
         </ul>
-        <div class="hero__plans-btn-wrapper">
-          <button class="hero__plans-btn text-p-default">Chose Plan</button>
+        <div class="pricing__plans-btn-wrapper">
+          <button class="pricing__plans-btn text-p-default">Chose Plan</button>
         </div>
       </li>
     </ul>
