--- a/src/scss/components/home/hero.scss
+++ b/src/scss/components/home/hero.scss
@@ -1,18 +1,18 @@
 /* stylelint-disable-next-line selector-class-pattern */
 .hero_1 {
   position: relative;
-  padding: 87px 0 141px;
+  padding: 80px 0;
 
   &-decor {
     position: relative;
   }
 
   @include mini-desktop {
-    padding: 67px 0 121px;
+    padding: 67px 0 60px;
   }
 
   @include mobile {
-    padding: 90px 0 60px;
+    padding: 90px 0 40px;
   }
 
   &_1 {
